try sending info

--- a/public/tiktokpets.html
+++ b/public/tiktokpets.html
@@ -41,7 +41,7 @@
         </form>
 
         <div class="button" id="submit">
-          <button type="submit" onsubmit="continueFunction()">Continue</button>
+          <button type="submit" id="continue_button">Continue</button>
         </div>
       </div>
 
