--- a/public/videoData.html
+++ b/public/videoData.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="https://ecs-162-spring-2022.profamenta.repl.co/reset.css" />
-  <link rel="stylesheet" type="text/css" href="tiktokpets.css" />
-  <script defer src="tiktokpets.js"></script>
+  <link rel="stylesheet" type="text/css" href="videoData.css" />
+  <script defer src="videoData.js"></script>
 </HEAD>
 <body>
 </body>
@@ -16,11 +16,21 @@
       <div id="title">
         <h1 id="logo">TikTok Pets</h1>
       </div>
-      <div class="button">
-        <button type="button">My Videos</button>
-      </div>
     </header>
-  
+
+    <main>
+       <div class="container" id="confirmation_container">
+         <div class="container" id="confirmpt1">
+         <h2 class = "confirmation" id = "c1"> Video &nbsp; </h2>
+         <h2 class = "confirmation" id = "c2"> 'placeholder' </h2>
+         </div>
+         <h2 class = "confirmation" id = "c3"> submitted successfully! </h2>
+       </div>
+      
+      <div class="button" id="submit">
+          <button type="submit" id="continue_button">Continue</button>
+        </div>
+    </main>
   </div>
 
 </html>
