--- a/public/tiktokpets.html
+++ b/public/tiktokpets.html
@@ -6,47 +6,40 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="https://ecs-162-spring-2022.profamenta.repl.co/reset.css" />
-  <link rel="stylesheet" type="text/css" href="tiktokpets.css" />
+  <link rel="stylesheet" type="text/css" href="tiktokpets-new.css" />
   <script defer src="tiktokpets.js"></script>
 </HEAD>
 <body>
-  <div class="container">
     <header>
       <div id="title">
         <h1 id="logo">TikTok Pets</h1>
       </div>
-      <div class="button">
-        <button type="button">My Videos</button>
-      </div>
+      <button type="button" id="videos_button">My Videos</button>
     </header>
 
     <main>
       <div class="container" id="form_container">
-        <form action="" id="form">
-          <div class="input">
-            <h1>Submit a video</h1>
+          <div class="input" id="form_header">
+            <h2>Submit a video</h2>
           </div>
           <div class="input">
-            <label for="username">Username:</label><br>
-            <input type="text" name="username" class="text" id="t1"><br>
+            <label for="username">Username:</label>
+            <input type="text" name="username" class="text" id="t1">
           </div>
           <div class="input">
-            <label for="url">Tiktok URL</label><br>
-            <input type="text" name="url" class="text"><br>
+            <label for="url">Tiktok URL</label>
+            <input type="text" name="url" class="text">
           </div>
           <div class="input">
-            <label for="nickname">Video nickname</label><br>
-            <input type="text" name="nickname" class="text"><br>
+            <label for="nickname">Video nickname</label>
+            <input type="text" name="nickname" class="text">
           </div>
-        </form>
-
-        <div class="button" id="submit">
-          <button type="submit" id="continue_button">Continue</button>
-        </div>
       </div>
 
+      <button type="submit" id="continue_button">Continue</button>
+      
+
     </main>
-  </div>
 
 </body>
 
