--- a/public/tiktokpets.html
+++ b/public/tiktokpets.html
@@ -20,18 +20,18 @@
     <main>
       <div class="container" id="form_container">
           <div class="input" id="form_header">
-            <h2>Submit a video</h2>
+            <h2>Submit a video:</h2>
           </div>
           <div class="input">
             <label for="username">Username:</label>
             <input type="text" name="username" class="text" id="t1">
           </div>
           <div class="input">
-            <label for="url">Tiktok URL</label>
+            <label for="url">Tiktok URL:</label>
             <input type="text" name="url" class="text">
           </div>
           <div class="input">
-            <label for="nickname">Video nickname</label>
+            <label for="nickname">Video nickname:</label>
             <input type="text" name="nickname" class="text">
           </div>
       </div>
